<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.preview.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvTitleMovie"
            style="@style/tvTitleStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/movies"
            app:layout_constraintBottom_toTopOf="@+id/rvMoviesPreview"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvMoviesPreview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="200dp"
            app:layout_constraintBottom_toTopOf="@+id/tvTitleTvSeries"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTitleMovie" />

        <TextView
            android:id="@+id/tvTitleTvSeries"
            style="@style/tvTitleStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_series"
            app:layout_constraintBottom_toTopOf="@+id/rvTvSeriesPreview"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rvMoviesPreview" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvTvSeriesPreview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="200dp"
            app:layout_constraintBottom_toTopOf="@+id/tvTitleCartoons"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTitleTvSeries" />

        <TextView
            android:id="@+id/tvTitleCartoons"
            style="@style/tvTitleStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cartoons"
            app:layout_constraintBottom_toTopOf="@+id/rvCartoonsPreview"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rvTvSeriesPreview" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvCartoonsPreview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="200dp"
            app:layout_constraintBottom_toTopOf="@+id/tvTitleAnime"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTitleCartoons" />

        <TextView
            android:id="@+id/tvTitleAnime"
            style="@style/tvTitleStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/anime"
            app:layout_constraintBottom_toTopOf="@+id/rvAnimePreview"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rvCartoonsPreview" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvAnimePreview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="200dp"
            app:layout_constraintBottom_toTopOf="@+id/tvTitleAnimatedSeries"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTitleAnime" />

        <TextView
            android:id="@+id/tvTitleAnimatedSeries"
            style="@style/tvTitleStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/animated_series"
            app:layout_constraintBottom_toTopOf="@+id/rvAnimatedSeriesPreview"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rvAnimePreview" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvAnimatedSeriesPreview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="200dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTitleAnimatedSeries" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>